; ModuleID = '/home/carl/AnghaBench/Craft/deps/glfw/src/extr_winmm_joystick.c_normalizeAxis.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/glfw/src/extr_winmm_joystick.c_normalizeAxis.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (i64, i64, i64)* @normalizeAxis to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @normalizeAxis(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %10 = load i64, i64* %4, align 8
  %11 = sitofp i64 %10 to float
  store float %11, float* %7, align 4
  %12 = load i64, i64* %5, align 8
  %13 = sitofp i64 %12 to float
  store float %13, float* %8, align 4
  %14 = load i64, i64* %6, align 8
  %15 = sitofp i64 %14 to float
  store float %15, float* %9, align 4
  %16 = load float, float* %7, align 4
  %17 = load float, float* %8, align 4
  %18 = fsub float %16, %17
  %19 = fmul float 2.000000e+00, %18
  %20 = load float, float* %9, align 4
  %21 = load float, float* %8, align 4
  %22 = fsub float %20, %21
  %23 = fdiv float %19, %22
  %24 = fsub float %23, 1.000000e+00
  ret float %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
